# aviation_mro

./: README.md  license.txt  pyproject.toml  setup.py
aviation_mro/: hooks.py  modules.txt
aviation_mro/aviation_mro/custom/: aircraft.json  asset.json  item.json  item_barcode.json  release_certificate.json
aviation_mro/aviation_mro/doctype/Logbook/: logbook.json  logbook.py
aviation_mro/aviation_mro/doctype/aircraft/: aircraft.js  aircraft.json  aircraft.py  test_aircraft.py
aviation_mro/aviation_mro/doctype/airworthiness_directive/: airworthiness_directive.json
aviation_mro/aviation_mro/doctype/core_tracking/: core_tracking.json
aviation_mro/aviation_mro/doctype/engine/: engine.json
aviation_mro/aviation_mro/doctype/engine_component/: engine_component.json  engine_component.py
aviation_mro/aviation_mro/doctype/item/: item.js  item.json  item.py  test_item.py
aviation_mro/aviation_mro/doctype/maintenance_task/: maintenance_task.json
aviation_mro/aviation_mro/doctype/overhaul_order/: overhaul_order.json
aviation_mro/aviation_mro/doctype/release_certificate/: release_certificate.json  release_certificate.py
aviation_mro/aviation_mro/doctype/serial_no/: serial_no.js  serial_no.json  serial_no.py  test_serial_no.py
aviation_mro/aviation_mro/doctype/service_bulletin/: service_bulletin.json
aviation_mro/config/: desktop.py  docs.py
aviation_mro/hooks/: asset_hooks.py  create_dashboards.py
aviation_mro/public/css/: aviation_mro.css
aviation_mro/public/js/: bom_custom.js
aviation_mro/workflows/: hsi_workflow.json  work_order_workflow.json
(+3 files in other folders)
