[project]
name = "aviation_mro"
authors = [
    { name = "Ed Harrison", email = "ed@turbinetech.aero"}
]
description = "Aviation maintenance and inventory for parts"
requires-python = ">=3.10"
readme = "README.md"
version = "1.0.0"
dependencies = ["frappe>=15.0.0"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
